--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".startservice.StartServiceTestActivity">
-        </activity>
+        <activity android:name=".messenger.MessengerServiceTestActivity"></activity>
+        <activity android:name=".startservice.StartServiceTestActivity"></activity>
         <activity android:name=".boundservice.BoundServiceTestActivity" />
 
         <service
@@ -19,6 +19,10 @@
             android:exported="true" />
         <service
             android:name=".startservice.MyService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".messenger.MessengerService"
             android:enabled="true"
             android:exported="true" />
 
